# OpenWiki

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  TODOS.md  index.html  openwiki-infographic.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: openwiki-features.html  openwiki-flow.html
release-notes/: v0.3.2.md
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gemini_oauth_verify.rs  oauth_verify.rs
src-tauri/resources/: openwiki_ocr.swift
src-tauri/resources/markitdown/: README.md
src-tauri/src/: lib.rs  locale.rs
src-tauri/src/ai/: attention_analyzer.rs  client.rs  codex_api.rs  gemini_api.rs  gemini_oauth.rs  mod.rs  oauth.rs  preference_engine.rs  prompts.rs  report_generator.rs  time_filter.rs  wiki_engine.rs  wiki_prompts.rs
src-tauri/src/capture/: clipboard.rs  detector.rs  mod.rs  ocr.rs  screenshot.rs  sensitive_filter.rs  url_reader.rs
src-tauri/src/commands/: attention.rs  capture.rs  datahub.rs  mcp.rs  mod.rs  oauth.rs  preferences.rs  report.rs  storage.rs  wiki.rs
src-tauri/src/export/: markdown.rs
src-tauri/src/storage/: database.rs  models.rs  repository.rs
src-tauri/src/storage/migrations/: 001_initial.sql
src-tauri/src/update/: mod.rs
src/components/: BubbleView.tsx
src/services/: dataHubService.ts  settingsService.ts  storageService.ts  updateService.ts  wikiService.ts
src/stores/: contentStore.ts  settingsStore.ts
src/types/: content.ts
(+48 files in other folders)
